finished up the trainer page, modified some layout issues in waiver

--- a/pages/Trainer-waiver/trainer.css
+++ b/pages/Trainer-waiver/trainer.css
@@ -20,3 +20,70 @@ ul li {
     list-style-type: none;
     font-weight: 700;
 }
+
+.trainer-about{margin-top: 50px;}
+
+.trainer-about, 
+.trainer-about h1, 
+.trainer-about h2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--primary-color);
+}
+
+.trainer-about h2{margin-top: 10px;}
+
+.trainer-about p{
+    color: var(--secondary-color);
+    font-weight: 600;
+    margin: 60px 0 20px 0;
+    font-size: 18px;
+}
+.form-header h3{
+    text-align: center;
+    margin-top: 150px;
+    margin-bottom: 50px;
+    color: var(--secondary-color);
+}
+
+.trainer-form-wrapper{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 100px;
+}
+
+.trainer-form-wrapper input {padding-top: 20px;}
+
+.trainer-form-wrapper input,
+.trainer-form-wrapper textarea{
+    background-color: transparent;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 2px solid black;
+    margin-bottom: 20px;
+}
+
+.name{
+    display: flex;
+    gap: 30px;
+}
+
+.email input,
+.phone input
+{padding: 10px 105px;}
+
+.comments textarea {padding: 20px 40px;}
+
+.trainer-form-wrapper div.btn input{
+    background-color: var(--accent-color);
+    color: var(--heading-color);
+    border-radius: 30px;
+    text-align: center;
+    padding: 10px 50px;
+
+}
